# darklab_training_postgresql

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Taskfile.shared.compose.yml  Taskfile.yml  docker-compose.yml  go.mod  go.sum  make  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: ci.yml
.github/workflows/: ci.yml  pages.yml
OLD/: README.md
OLD/migrations/: 1.sql
OLD_CODE_in_python/: docker-compose.yml
OLD_CODE_in_python/src/: status.md
docs/: README.md  Taskfile.yml  examples.md  go.mod  package-lock.json  requirements.md
docs/content/: _index.md
docs/solution/: task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md
documentation/: PostgresqlTraining.kindOfEnglish.docx
golang/: example_test.go  fixture_fill_data.go  fixture_subtests.go  fixture_temp_db_test.go  fixture_test.go  fixtures.go  fixtures_test.go  task1_test.go  task2_test.go  task3_1_test.go  task3_2_test.go  task3_3_test.go  task3_4_test.go  task3_5_test.go  task3_test.go  task4_1_test.go  task4_2_test.go  task4_3_test.go  task4_4_test.go  task4_5_test.go  task4_6_test.go  task4_test.go  test6_test.go  test7_test.go
golang/golang_test/: example_test.go  fixture_test.go
golang/settings/: settings.go
golang/shared/: bulk_create.go  main.go  worker.go
golang/task1/: main_test.go
legacy/: .gitlab-ci.yml
src/: conftest.py  conftest_migrations.py  conftest_task2.py  examples.md  index.md  requirements.md  resources.md  status.md  task_1.md  task_2.md  task_3.md  task_4.md  task_7.md
src/task2/: user.go  (+10 more)
utils/: sql.go
(+221 files in other folders)
