[tool.poetry]
name = "noveo-training-postgresql"
version = "0.1.0"
description = ""
authors = ["Andrei Novoselov <andrei.novoselov@noveogroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.1"
pymdown-extensions = "^9.7"
sqlalchemy = "^1.4.42"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"
asyncpg = "^0.26.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
